--- a/data/stories.yml
+++ b/data/stories.yml
@@ -2,29 +2,34 @@ version: "3.1"
 
 stories:
 
-- story: happy path
+- story: corona intro
   steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_great
-  - action: utter_happy
+  - intent: corona_intro
+  - action: utter_corona_intro
 
-- story: sad path 1
-  steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - intent: affirm
-  - action: utter_happy
 
-- story: sad path 2
+- story: corona spread
   steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - intent: deny
-  - action: utter_goodbye
+  - intent: corona_spread
+  - action: utter_corona_spread
+
+
+
+- story: corona food spread
+  steps:
+  - intent: corona_food_spread
+  - action: utter_corona_food_spread
+
+
+
+- story: corona warm weather
+  steps:
+  - intent: warm_weather
+  - action: utter_warm_weather
+
+
+- story: corona_high_risk
+  steps:
+  - intent: high_risk
+  - action: utter_high_risk
+
